--- a/views/policyprod.html
+++ b/views/policyprod.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
     <style>
       body {
         background-image: url("images/r.png");
@@ -39,48 +42,68 @@
     </nav>
     <div class="container mt-4">
       <h1>Policy of Products</h1>
-      <p>
-        <h3>General safety instructions</h3>
+      <h3>General safety instructions</h3>
       • You must act in a considered and logical way while using the device.
-      <br>
-      • You must use a standard computer desk where all the cables pass through the desk itself - do not place the device on an unstable cart, stand or table. The device may fall and cause serious damage.
-      <br>
-      • Do not place the device next to or over a radiator, heater, air conditioner or vent.
-      <br>
+      <br />
+      • You must use a standard computer desk where all the cables pass through
+      the desk itself - do not place the device on an unstable cart, stand or
+      table. The device may fall and cause serious damage.
+      <br />
+      • Do not place the device next to or over a radiator, heater, air
+      conditioner or vent.
+      <br />
       • Do not place any object on the power cable.
-      <br>
+      <br />
       • Do not place the device where people may step on the power cable.
-      <br>
-      • Do not overload electrical outlets or extension cords. Overloading may reduce the performance of the device and cause fire or electric shock.
-      <br>
-      • Do not allow pets to chew on the power cord or the computer's interface cables.
-      <br>
-      • Do not place the cable in a place where pests such as mice and other rodents pass through that may cause damage to the cable. There is a possibility of electric shock or fire.
-      <br>
-      • Be sure to lay the cable loosely and not close it with furniture and accessories such as the desktop.
-      <br>
-      • Be sure to connect the product to standard electrical outlets that conform to the Israeli standard.
-      <br>
-      • Before moving the product, it must be disconnected from the electrical current source.
-      <br>
+      <br />
+      • Do not overload electrical outlets or extension cords. Overloading may
+      reduce the performance of the device and cause fire or electric shock.
+      <br />
+      • Do not allow pets to chew on the power cord or the computer's interface
+      cables.
+      <br />
+      • Do not place the cable in a place where pests such as mice and other
+      rodents pass through that may cause damage to the cable. There is a
+      possibility of electric shock or fire.
+      <br />
+      • Be sure to lay the cable loosely and not close it with furniture and
+      accessories such as the desktop.
+      <br />
+      • Be sure to connect the product to standard electrical outlets that
+      conform to the Israeli standard.
+      <br />
+      • Before moving the product, it must be disconnected from the electrical
+      current source.
+      <br />
       • Use only a standard electrical cable supplied with the manufacturer.
-      <br>
-      • Do not insert any objects into the device through the case openings. The objects may touch a dangerous voltage point and create a fire or electric shock hazard.
-      <br>
+      <br />
+      • Do not insert any objects into the device through the case openings. The
+      objects may touch a dangerous voltage point and create a fire or electric
+      shock hazard.
+      <br />
       • Do not pour liquid of any kind on or into the device.
-      <br>
-      • In case of lack of use for a long time, it is recommended to disconnect the product from the electrical current and store it closed in the box in order to prevent as much as possible the penetration of dust and pests into it.
-      <br>
-      • Do not disassemble the device. When a repair is required, take the device to a qualified service technician. Opening or removing covers may expose you to dangerous electrical voltage or other hazards. Improper reassembly may result in electric shock the next time the device is used.
-      <br>
-      • Avoid using the device during a lightning storm. There is a possibility of electric shock from the lightning. If possible, disconnect the cable from the electrical outlet during the lightning storm.
-      <br>
-      • Before cleaning, disconnect the device from the electrical outlet. Do not use liquid or spray cleaners. Use only a damp cloth for cleaning.
-      </p>
+      <br />
+      • In case of lack of use for a long time, it is recommended to disconnect
+      the product from the electrical current and store it closed in the box in
+      order to prevent as much as possible the penetration of dust and pests
+      into it.
+      <br />
+      • Do not disassemble the device. When a repair is required, take the
+      device to a qualified service technician. Opening or removing covers may
+      expose you to dangerous electrical voltage or other hazards. Improper
+      reassembly may result in electric shock the next time the device is used.
+      <br />
+      • Avoid using the device during a lightning storm. There is a possibility
+      of electric shock from the lightning. If possible, disconnect the cable
+      from the electrical outlet during the lightning storm.
+      <br />
+      • Before cleaning, disconnect the device from the electrical outlet. Do
+      not use liquid or spray cleaners. Use only a damp cloth for cleaning.
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  </body>
+     
+  </body>
 </html>
