--- a/views/policy.html
+++ b/views/policy.html
@@ -21,7 +21,7 @@
 
       /* This class is applied to the containing div <div class="nav"> and is used to set the background color and height of the navbar */
       .nav {
-        background: #000;
+        background: #f50606;
         height: 60px; /* set same as height & line-height below */
       }
 
